# ssq-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/assets/: README.md
app/core/: __init__.py  analyzer_service.py  config_schema.py  result_formatter.py
app/gui/: __init__.py  main_window.py
app/gui/dialogs/: __init__.py
app/gui/widgets/: __init__.py
app/scripts/: __init__.py  registry.py
app/scripts/plugins/: README.md
cli/: __init__.py  main.py
docs/superpowers/plans/: 2026-06-25-macos-gui-plan.md  2026-07-16-optional-liuyao-cast-input-plan.md
docs/superpowers/specs/: 2026-06-25-macos-gui-design.md
scripts/: ssq_update_generate.sh
src/ssq_analyzer/: __init__.py  backtest.py  cli.py  data.py  deep_learning.py  exporters.py  generator.py  liuyao.py  models.py  personal.py  schedule.py  stats.py
tests/: test_app_core.py  test_app_entrypoint.py  test_backtest_exporters.py  test_cli.py  test_cli_wrapper.py  test_data.py  test_generator.py  test_gui_labels.py  test_liuyao.py  test_models.py  test_schedule.py  test_stats.py  test_update_script.py
